styles/_nodes-menu.scss
@use "./utils" as utils;

#trigger-engine-nodes-menu {
    --tags-buttons-bg: var(--color-cool-4);
    --tags-buttons-border: none;
    --tags-select-separator: 1px solid #ffffff1a;

    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    .content {
        white-space: nowrap;
        min-width: 600px;
        min-height: 300px;
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 0.3em;
        padding: 0.5em;

        .left,
        .right {
            display: flex;
            flex-direction: column;
            overflow: hidden;

            .scroll {
                flex: 1;
                display: flex;
                flex-direction: column;
                gap: 0.3em;
            }

            fieldset {
                position: relative;
                overflow-y: auto;

                .legend {
                    font-size: 1.2em;
                }

                .selectable {
                    position: relative;
                    font-size: 1.1em;
                    padding-block: 0.2em;
                    cursor: pointer;

                    &:hover {
                        &::before {
                            content: "";
                            position: absolute;
                            inset: 0 -5px 0 -5px;
                            background: var(--color-fieldset-border);
                            opacity: 0.4;
                            z-index: -1;
                        }

                        .name {
                            filter: brightness(1.1);
                        }
                    }
                }
            }
        }

        .left {
            gap: 0.3em;

            [name="search"] {
                @include utils.text-input();

                input {
                    height: 1.6rem;
                }
            }

            [name="tags"] {
                @include utils.multi-select();

                margin-top: -2px;

                select {
                    height: 1.6rem;
                    border-left: var(--tags-select-separator);
                    border-right: var(--tags-select-separator);
                }

                .tags-mode,
                .clear-tags {
                    background: var(--tags-buttons-bg);
                }
            }
        }
    }
}

body.theme-light #trigger-engine-nodes-menu {
    --tags-buttons-bg: #0000001a;
    --tags-select-separator: none;
    --tags-buttons-border: 1px solid var(--color-dark-6);
}

